--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <title>Bootstrap Starter Pack</title>
 </head>
 <body>
+<!--navigation-->
   <nav class="navbar navbar-light bg-light navbar-expand-md">
     <div class="container">
       <a href="index.html" class="navbar-brand">
@@ -18,7 +19,6 @@
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2 input-large" type="search" placeholder="Search" aria-label="Search">
       </form>
-
       <div>
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -36,10 +36,24 @@
 
         </ul>
       </div>
-
-
     </div>
   </nav>
+<!--body part-->
+<div class="container-fluid bannergb">
+  <div class="row">
+    <div class="col-md-6">
+      <h1 class="display-4 text-light">Mad Makeup</h1>
+      <h2 class="display-4 text-light">Markdowns!</h2>
+      <p class="lead text-light">Get the cosmatic you need at the prices you want</p>
+      <button class="btn btn-primary">check out the glam!</button>
+    </div>
+    <div class="col-md-6">
+      <img src="img/KAawBcS.png" class="img-fluid" width="400" alt="">
+
+    </div>
+  </div>
+
+</div>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
