--- a/src/index.html
+++ b/src/index.html
@@ -39,21 +39,137 @@
     </div>
   </nav>
 <!--body part-->
-<div class="container-fluid bannergb">
+<div class="container-fluid bannergb py-5">
   <div class="row">
     <div class="col-md-6">
-      <h1 class="display-4 text-light">Mad Makeup</h1>
-      <h2 class="display-4 text-light">Markdowns!</h2>
+      <h1 class="display-4 text-light mt-5">Mad Makeup <br>Markdowns!</h1>
       <p class="lead text-light">Get the cosmatic you need at the prices you want</p>
       <button class="btn btn-primary">check out the glam!</button>
     </div>
-    <div class="col-md-6">
-      <img src="img/KAawBcS.png" class="img-fluid" width="400" alt="">
-
+    <div class="col-md-6 mt-5">
+      <img src="img/KAawBcS.png" class="img-fluid img-size" width="400" alt="">
     </div>
   </div>
 
 </div>
+<!--home vedio section-->
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="dark-overlay">
+        <a href="fa fa-youtube squre"></a>
+      </div>
+    </div>
+    <div class="col-md-6 text-light">
+      <h2 class="mt-3 display-5">What customers and press say about Backpack</h2>
+      <p class="lead font-italic">
+        Till today, I have ordered 5 items and I received all of them on time. At first, I was scared because I thought this service could be fraudulent like many of the other ones that exist here, but I soon found out I was wrong. I really love their service. My only criticism would be to ensure that when someone searches for an item, they should filter out anything that doesn’t fit the search parameters.
+      </p>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+          <div class="item carousel-item active">
+            <div class="row">
+              <div class="col-12">
+                <div class="testimonial-wrapper">
+                  <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                  <div class="media">
+                    <div class="media-left d-flex mr-3">
+                      <img src="img/9.jpg" alt="">
+                    </div>
+                    <div class="media-body">
+                      <div class="overview">
+                        <div class="name"><b>Paula Wilson</b></div>
+                        <div class="details">Media Analyst / SkyNet</div>
+                        <div class="star-rating">
+                          <ul class="list-inline">
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star-half-o"></i></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="item carousel-item">
+            <div class="row">
+              <div class="col-12">
+                <div class="testimonial-wrapper">
+                  <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                  <div class="media">
+                    <div class="media-left d-flex mr-3">
+                      <img src="img/9.jpg" alt="">
+                    </div>
+                    <div class="media-body">
+                      <div class="overview">
+                        <div class="name"><b>Michael Holz</b></div>
+                        <div class="details">Web Developer / DevCorp</div>
+                        <div class="star-rating">
+                          <ul class="list-inline">
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="item carousel-item">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="testimonial-wrapper">
+                  <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                  <div class="media">
+                    <div class="media-left d-flex mr-3">
+                      <img src="img/9.jpg" alt="">
+                    </div>
+                    <div class="media-body">
+                      <div class="overview">
+                        <div class="name"><b>Martin Sommer</b></div>
+                        <div class="details">SEO Analyst / RealSearch</div>
+                        <div class="star-rating">
+                          <ul class="list-inline">
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                            <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
