--- a/src/contact.html
+++ b/src/contact.html
@@ -132,7 +132,10 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="testimonial-wrapper">
-                                    <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                                    <div class="testimonial">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis
+                                            vel, semper malesuada ante, commodo iacul viverra.</p></div>
                                     <div class="media">
                                         <div class="media-left d-flex mr-3">
                                             <img src="img/9.jpg" alt="">
@@ -162,7 +165,12 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="testimonial-wrapper">
-                                    <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                                    <div class="testimonial">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Nam eu sem tempor, varius quam at, luctus dui. Mauris
+                                            magna metus, dapibus nec turpis vel, semper malesuada ante, commodo
+                                            iacul viverra.</p>
+                                    </div>
                                     <div class="media">
                                         <div class="media-left d-flex mr-3">
                                             <img src="img/9.jpg" alt="">
@@ -192,7 +200,11 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="testimonial-wrapper">
-                                    <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                                    <div class="testimonial">
+                                       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Nam eu sem tempor, varius quam at, luctus dui. Mauris magna
+                                        metus, dapibus nec turpis vel, semper malesuada ante, commodo
+                                        iacul viverra</p>.</div>
                                     <div class="media">
                                         <div class="media-left d-flex mr-3">
                                             <img src="img/9.jpg" alt="">
@@ -219,6 +231,38 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<section id="Home-vedio" class="text-center text-light">
+    <div class="dark-overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col mt-5 pt-4">
+                    <div uk-lightbox>
+                        <a href="https://youtu.be/UDpL5ZFhXK0" class="text-light">
+                            <i class="fa fa-play"></i>
+                        </a>
+                    </div>
+                    <h2 class="mt-3">2hour Jobs</h2>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</section>
+<div class="dark-overlay">
+    <div class="container">
+        <div class="row">
+            <div class="col-6 mt-5 pt-4">
+                <div uk-lightbox>
+                    <a href="https://youtu.be/UDpL5ZFhXK0" class="text-light">
+                        <i class="fa fa-play"></i>
+                    </a>
+                </div>
+                <h2 class="mt-3">2hour Jobs</h2>
             </div>
         </div>
     </div>
