--- a/src/index.html
+++ b/src/index.html
@@ -53,18 +53,18 @@
 
 </div>
 <!--home vedio section-->
-<div class="container">
+<div class="container-fluid bg-light">
   <div class="row">
     <div class="col-md-6">
-      <div class="dark-overlay">
-        <a href="fa fa-youtube squre"></a>
+      <div uk-lightbox>
+        <a href="https://youtu.be/UDpL5ZFhXK0" class="text-light">
+          <i class="fa fa-play"></i>
+        </a>
       </div>
+      <h2 class="mt-3">2hour Jobs</h2>
     </div>
     <div class="col-md-6 text-light">
       <h2 class="mt-3 display-5">What customers and press say about Backpack</h2>
-      <p class="lead font-italic">
-        Till today, I have ordered 5 items and I received all of them on time. At first, I was scared because I thought this service could be fraudulent like many of the other ones that exist here, but I soon found out I was wrong. I really love their service. My only criticism would be to ensure that when someone searches for an item, they should filter out anything that doesn’t fit the search parameters.
-      </p>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
@@ -75,10 +75,8 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
           <div class="item carousel-item active">
-            <div class="row">
-              <div class="col-12">
                 <div class="testimonial-wrapper">
-                  <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                  <div class="testimonial lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
                   <div class="media">
                     <div class="media-left d-flex mr-3">
                       <img src="img/9.jpg" alt="">
@@ -100,15 +98,10 @@
                     </div>
                   </div>
                 </div>
-              </div>
-
-            </div>
           </div>
           <div class="item carousel-item">
-            <div class="row">
-              <div class="col-12">
                 <div class="testimonial-wrapper">
-                  <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                  <div class="testimonial lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
                   <div class="media">
                     <div class="media-left d-flex mr-3">
                       <img src="img/9.jpg" alt="">
@@ -130,15 +123,12 @@
                     </div>
                   </div>
                 </div>
-              </div>
-
-            </div>
           </div>
           <div class="item carousel-item">
-            <div class="row">
+
               <div class="col-sm-12">
                 <div class="testimonial-wrapper">
-                  <div class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
+                  <div class="testimonial lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante, commodo iacul viverra.</div>
                   <div class="media">
                     <div class="media-left d-flex mr-3">
                       <img src="img/9.jpg" alt="">
@@ -161,9 +151,6 @@
                   </div>
                 </div>
               </div>
-
-            </div>
-          </div>
         </div>
       </div>
     </div>
