--- a/src/contact.html
+++ b/src/contact.html
@@ -267,7 +267,68 @@
         </div>
     </div>
 </div>
-<script src="js/jquery.min.js"></script>
+<div class="container-fluid bg-light">
+    <div class="row">
+        <div class="col-md-6">
+            <iframe class="p-5" width="100%" height="436" src="https://www.youtube.com/embed/10sYesJhMbs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-6 text-light">
+            <h2 class="mt-3 display-5">What customers and press say about Backpack</h2>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Carousel indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+                <!--caousel-->
+                <section id="showcase" class="bg-dark">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-slide-to="0" data-target="#myCarousel" class="active"  ></li>
+                            <li data-slide-to="2" data-target="#myCarousel"></li>
+                            <li data-slide-to="3" data-target="#myCarousel"   ></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item carousel-img-1 active">
+                                <div class="container">
+                                    <div class="carousel-caption mb-3 pb-3 mb-sm-5 pb-sm-5">
+                                        <h2 class="display-4">Heading One</h2>
+                                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis at esse, voluptatibus tenetur ab obcaecati. Voluptatem expedita fugit minima sapiente!</p>
+                                        <a href="" class="btn btn-warning">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item carousel-img-2">
+                                <div class="container">
+                                    <div class="carousel-caption mb-3 pb-3 mb-sm-5 pb-sm-5">
+                                        <h2 class="display-4">Heading Two</h2>
+                                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis at esse, voluptatibus tenetur ab obcaecati. Voluptatem expedita fugit minima sapiente!</p>
+                                        <a href="" class="btn btn-danger">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item carousel-img-3">
+                                <div class="container">
+                                    <div class="carousel-caption mb-3 pb-3 mb-sm-5 pb-sm-5 text-left">
+                                        <h2 class="display-4">Heading Three</h2>
+                                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis at esse, voluptatibus tenetur ab obcaecati. Voluptatem expedita fugit minima sapiente!</p>
+                                        <a href="" class="btn btn-primary">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#myCarousel" class="carousel-control-prev" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a href="#myCarousel" class="carousel-control-next" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+
+                </section>
+
+                <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
