--- a/src/contact.html
+++ b/src/contact.html
@@ -327,6 +327,19 @@
                     </div>
 
                 </section>
+                <!--scss-->
+                .carousel-img-1{
+                background: url("../img/KAawBcS.png");
+                background-size: cover;
+                }
+                .carousel-img-2{
+                background: url("../img/03.jpg");
+                background-size: cover;
+                }
+                .carousel-img-3{
+                background: url("../img/img7.jpg");
+                background-size: cover;
+                }
 
                 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
