--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,9 @@
               <i class="fa fa-cart-plus"></i>
               <span>100% original products</span>
             </li>
-
+            <li class="pt-3">
+              <a class=" btn btn-outline-primary" href=""><i class="fa fa-facebook"></i> <span>find Us on facebook</span></a>
+            </li>
           </ul>
         </div>
         <div class="col-md-3">
@@ -189,11 +191,7 @@
             <li>cancellation and feound</li>
             <li>FAQs</li>
             <li>Coustomer Support</li>
-            <li></li>
-
-
-
-
+        </div>
         <div class="col-md-3">
           <ul>
             <li>Account</li>
@@ -213,11 +211,35 @@
             <li>contact</li>
           </ul>
         </div>
-      </div>
+        </div>
 
-    </div>
+      </div>
   </section>
-  <br>
+  <hr>
+  <!--footer menu-->
+  <section id="footer-navber">
+ <nav class="navbar navbar-expand-md pull-right ">
+   <div class="container">
+     <ul class="navbar-nav">
+       <li class="nav-item">
+         <a href="careers.html" class="nav-link">careers</a>
+       </li>
+       <li class="nav-item">
+         <a href="about.html" class="nav-link">about</a>
+       </li>
+       <li class="nav-item">
+         <a href="terms.html" class="nav-link">terms</a>
+       </li>
+       <li class="nav-item">
+         <a href="privacy.html" class="nav-link">privacy</a>
+       </li>
+       <li class="nav-item">
+         <a href="siteman.html" class="nav-link">site man</a>
+       </li>
+     </ul>
+   </div>
+ </nav>
+  </section>
 
 
   <script src="js/jquery.min.js"></script>
