--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,64 @@
     </div>
   </div>
 </div>
+  <!--most popular catagories-->
+  <section id="populercatagories" class="py-5">
+    <div class="container">
+      <h3>most populer catagories</h3>
+      <div class="row">
+        <div class="col-md-6 leftoverlay" id="popularleft">
+          <div class="row ">
+            <div class="col-md-6">
+              <ul>
+                <li> bluetoothe and wireless speakers</li>
+                <li>call phn and accessories</li>
+                <li> powerbanks</li>
+                <li>R-readers</li>
+                <li>action figures</li>
+                <li>watch</li>
+              </ul>
+
+            </div>
+            <div class="col-md-6 mb-3">
+              <ul>
+                <li>Headphones</li>
+                <li>vitamins and delitary supplyment</li>
+                <li>purfume and decorent</li>
+                <li>busniess books</li>
+                <li>mens grooming</li>
+                <li>facial skin care</li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6 rightoverlay"  id="popularright">
+              <ul>
+                <li>Headphones</li>
+                <li>vitamins and delitary supplyment</li>
+                <li>purfume and decorent</li>
+                <li>busniess books</li>
+                <li>mens grooming</li>
+                <li>facial skin care</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li> bluetoothe and wireless speakers</li>
+                <li>call phn and accessories</li>
+                <li> powerbanks</li>
+                <li>R-readers</li>
+                <li>action figures</li>
+                <li>watch</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!--Recent searches-->
   <section id="recent searches">
     <div class="container">
