--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,20 @@
     </div>
   </div>
 </div>
+  <!--top picks-->
+  <section id="picks" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3"></div>
+      </div>
+    </div>
+
+  </section>
   <!--most popular catagories-->
   <section id="populercatagories" class="py-5">
     <div class="container">
@@ -153,7 +167,6 @@
                 <li>action figures</li>
                 <li>watch</li>
               </ul>
-
             </div>
             <div class="col-md-6 mb-3">
               <ul>
@@ -163,14 +176,13 @@
                 <li>busniess books</li>
                 <li>mens grooming</li>
                 <li>facial skin care</li>
-
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 rightoverlay"  id="popularright">
           <div class="row">
-            <div class="col-md-6 rightoverlay"  id="popularright">
+            <div class="col-md-6 " >
               <ul>
                 <li>Headphones</li>
                 <li>vitamins and delitary supplyment</li>
@@ -192,7 +204,7 @@
             </div>
           </div>
         </div>
-      </div>
+        </div>
     </div>
   </section>
   <!--Recent searches-->
