--- a/src/index.html
+++ b/src/index.html
@@ -149,8 +149,51 @@
         <div class="col-md-3"></div>
       </div>
     </div>
+  </section>
+  <!--showcase-->
+  <section id="productCarousel1" class="bg-dark">
+    <div id="myCarouselp1" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-slide-to="0" data-target="#myCarouselp1" class="active"  ></li>
+        <li data-slide-to="2" data-target="#myCarouselp1"></li>
+        <li data-slide-to="3" data-target="#myCarouselp1"   ></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item carousel-img-1 active">
+          <div class="container">
+            <div class="carousel-caption mb-3 pb-3 mb-sm-5 pb-sm-5">
+              <img src="img/9.jpg" alt="">
+              <a href="" class="btn btn-warning">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item carousel-img-2">
+          <div class="container">
+            <div class="carousel-caption mb-3 pb-3 mb-sm-5 pb-sm-5">
+              <h2 class="display-4">Heading Two</h2>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis at esse, voluptatibus tenetur ab obcaecati. Voluptatem expedita fugit minima sapiente!</p>
+              <a href="" class="btn btn-danger">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item carousel-img-3">
+          <div class="container">
+            <div class="carousel-caption mb-3 pb-3 mb-sm-5 pb-sm-5 text-left">
+              <img src="img/9.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="#myCarouselp1" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a href="#myCarouselp1" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
 
   </section>
+
   <!--most popular catagories-->
   <section id="populercatagories" class="py-5">
     <div class="container">
